# lazyscript

./: .gitignore  CMakeLists.txt  main.cpp
include/: debugger.hpp  lazyscript.hpp  utils.hpp
include/lazyscript/: ast.hpp  lexer.hpp  llvm_gen.hpp  parser.hpp  token_formatter.hpp
src/: main.cpp
src/lazyscript/: lexer.cpp  llvm_gen.cpp  parser.cpp
